# zksync-era

./: .gitmodules  Dockerfile  flake.nix
.github/: std-unexploded.yml
.github/workflows/: ci.yml  docker-build-push.yml  docker-retag.yml  std.yml
core/lib/config/src/: testonly.rs
core/lib/constants/src/: ethereum.rs  trusted_slots.rs
core/lib/contract_verifier/src/: lib.rs
core/lib/env_config/src/: api.rs  da_client.rs  eth_sender.rs  lib.rs
core/lib/eth_signer/: Cargo.toml
core/lib/eth_signer/src/: g_kms_signer.rs  gkms_signer.rs  lib.rs  raw_ethereum_tx.rs
core/lib/protobuf_config/src/: api.rs  eth.rs  general.rs  lib.rs  secrets.rs  tests.rs
core/lib/zksync_core/src/: lib.rs
core/lib/zksync_core_leftovers/src/: lib.rs
core/node/eth_sender/src/: error.rs  eth_fees_oracle.rs  eth_tx_manager.rs
core/node/fee_model/src/: lib.rs
core/node/node_framework/: Cargo.toml
core/node/node_framework/examples/: main_node.rs
docker/contract-verifier/: Dockerfile
docs/guides/external-node/prepared_configs/: mainnet-config.env  testnet-sepolia-config.env
etc/env/base/: eth_sender.toml  rust.toml
etc/env/configs/: dev.toml  ext-node.toml
etc/env/file_based/: general.yaml
etc/multivm_bootloaders/vm_1_5_0_increased_memory/fee_estimate.yul/: fee_estimate.yul.zbin
etc/multivm_bootloaders/vm_1_5_0_increased_memory/gas_test.yul/: gas_test.yul.zbin
etc/multivm_bootloaders/vm_1_5_0_increased_memory/proved_batch.yul/: proved_batch.yul.zbin
etc/nix/: prover.nix  zksync.nix
nix/local/: en.nix  en2.nix  oci-images.nix  operables.nix  packages.nix  prover.nix  server.nix
prover/: setup.sh
prover/vk_setup_data_generator_server_fri/: README.md
(+33 files in other folders)
